--- a/.env
+++ b/.env
@@ -2,7 +2,7 @@
 
 # DB = mongodb+srv://gravity:gravity@cluster0.x37wl6x.mongodb.net/?retryWrites=true&w=majority
 
-DB = mongodb+srv://gravity:1234@cluster0.s8hawnf.mongodb.net/
+DB = mongodb://127.0.0.1:27017/gravity
 
 SK = ha39fbf023h98f8uhveh98grh98b4t
 
