--- a/.env
+++ b/.env
@@ -1,8 +1,8 @@
 # DB = mongodb+srv://hiten:36901470@cluster0.og5ytj5.mongodb.net/test
 
-# DB = mongodb+srv://gravity:gravity@cluster0.x37wl6x.mongodb.net/?retryWrites=true&w=majority
+DB = mongodb+srv://gravity:gravity@cluster0.x37wl6x.mongodb.net/?retryWrites=true&w=majority
 
-DB = mongodb://127.0.0.1:27017/gravity
+# DB = mongodb://127.0.0.1:27017/gravity
 
 SK = ha39fbf023h98f8uhveh98grh98b4t
 
